Attempt to simplify jacoco logic
Simplifies Jacoco logic. From long ago, jacoco support was added through
a series of hacks. Some of these hacks are no longer necessary, so they
were removed to simplify.

Signed-off-by: John Mazanec <jmazane@amazon.com>